# interesting_thesis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-site.yml
bibliographie/: README.md  references.bib
cartes/: AUDIT_PROPOSITIONS.md  COUVERTURE_EXTRACTION.md  ORDRE_TRAITEMENT_DOCUMENTS.md  ORGANISATION.md  PLAN_DOCUMENTS.md  README.md  REGISTRE_TRAITEMENT.md  catalogue-idees.tex  relations.tsv
cartes/inbox/: idea_0001_interessant_processus_temporel.md  (+125 more)
config/: default_roles.json  research_program.example.json
docs/: v2_orchestration.md
input/: README.md
interesting_thesis/: __init__.py  cli.py  config.py  debate.py  digest.py  env.py  errors.py  ingestion.py  llm.py  memory.py  models.py  pipeline.py  prompts.py  schemas.py  text_utils.py
old docs /: ERCGrantPachetInterestingness (1).docx  Lenat and interestingness.eml
output/: corpus_digest.md  final_synthesis.md  round_01.md  round_02.md  round_03.md  thesis_paragraphs.md
projet-these/: BUT_DE_LA_THESE.md  CHANGELOG.md  Makefile  README.md  projet-these-en.tex  projet-these-fr.tex
prompts/: constructeur.md  critique.md  digest.md  final_synthesis.md  synthetiseur.md
scripts/: french_diacritics.tsv  french_spell_suggestions.swift  generate_card_catalog.py  generate_idea_graph.py  generate_thesis_site.py  normalize_card_french.py  normalize_french_docs.py  sync_card_index_titles.py
site/: README.md
tests/: test_card_catalog_rendering.py  test_card_metadata.py  test_card_organization.py  test_env.py  test_french_documents.py  test_pipeline_dry_run.py  test_thesis_site.py
(+42 files in other folders)
